--- a/index.html
+++ b/index.html
@@ -1,20 +1,93 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Messagerie camcompete</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="chat-container">
-    <div class="messages" id="messages"></div>
-    <div class="input-container">
-      <input type="text" id="messageInput" autofocus placeholder="Écrivez un message..." />
-      <button id="sendButtonBlue">Envoyer</button>
-      <input type="color" id="messageColor" value="#0000ff">
-    </div>
-  </div>
-  <script src="app.js"></script>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Messagerie camcompete</title>
+    <link rel="stylesheet" href="style_login.css">
+    <link rel="icon" href="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQy3tkaiNqRVPbyGI4rx7CGQCG4d1MqXSyEKg&s">
+  </head>
+  <body>
+    <div class="login_form">
+        <div class="input__container" style="margin-top: 100px;">
+          <div class="shadow__input"></div>
+            <button class="input__button__shadow">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                viewBox="0 0 24 24"
+                fill="#000000"
+                width="20px"
+                height="20px"
+              >
+                <path d="M0 0h24v24H0z" fill="none"></path>
+                <path
+                  d="M12 12c2.21 0 4-1.79 4-4s-1.79-4-4-4-4 1.79-4 4 1.79 4 4 4zm0 2c-2.67 0-8 1.34-8 4v2h16v-2c0-2.66-5.33-4-8-4z"
+                ></path>
+              </svg>
+            </button>
+            <input
+              id="login_username"
+              type="text"
+              name="username"
+              class="input__search"
+              placeholder="Enter username"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="login_form">
+        <div class="input__container2" style="margin-top: 100px;justify-content: center;">
+          <div class="shadow__input2"></div>
+            <button class="input__button__shadow">
+              <svg class="input-icon" viewBox="0 0 500 500" xmlns="http://www.w3.org/2000/svg">
+                <path d="M80 192V144C80 64.47 144.5 0 224 0C303.5 0 368 64.47 368 144V192H384C419.3 192 448 220.7 448 256V448C448 483.3 419.3 512 384 512H64C28.65 512 0 483.3 0 448V256C0 220.7 28.65 192 64 192H80zM144 192H304V144C304 99.82 268.2 64 224 64C179.8 64 144 99.82 144 144V192z"></path></svg>
+            </button>
+            <input
+              type="password"
+              id="login_password"
+              name="password"
+              class="input__search2"
+              placeholder="Enter password"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="login_form_buttons">
+        <button id="button" onclick="formulaire_login()">
+          <p>log in</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="4"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M14 5l7 7m0 0l-7 7m7-7H3"
+            ></path>
+          </svg>
+        </button>
+        <button id="button2" onclick="formulaire_login()">
+          <p>register</p>
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            class="h-6 w-6"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke="currentColor"
+            stroke-width="4"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M14 5l7 7m0 0l-7 7m7-7H3"
+            ></path>
+          </svg>
+        </button>
+      </div>
+      <script src = "app.js"></script>
+  </body>
 </html>
